--- a/about.html.html
+++ b/about.html.html
@@ -21,7 +21,7 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i>
 
                 <ul>
-                    <li><a href="recipes.html">HOME</a></li>
+                    <li><a href="index.html.html">HOME</a></li>
                     <li><a href="about.html.html">ABOUT</a></li>
                     <li><a href="course.html.html">RECIPES</a></li>
                     <li><a href="blog.html.html">BLOG</a></li>
