--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 <section class="cta">
     <h1>Join Our Community</h1>
-    <a href="" class="hero-btn">contact us</a>
+    <a href="contact.html.html" class="hero-btn">contact us</a>
 
 </section>
 
