--- a/southindian.html
+++ b/southindian.html
@@ -36,7 +36,7 @@
             <h1>South Indian</h1>
             <p> Here are some South Indian Dishes. Dive into our top picks!</p>
             <div class="row">
-                <a href="">
+                <a href="chettinad.html">
                     <div class="south-col">
                         <img src="chettinad.jpeg" alt="chettinad">
                         <div class="layer">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="">
+                <a href="pesarattu.html">
                     <div class="south-col">
                         <img src="pesarattu.jpeg" alt="pesarattu">
                         <div class="layer">
