--- a/pesarattu.html
+++ b/pesarattu.html
@@ -38,7 +38,8 @@
             <div class="row">
               
                 <div class="pesarattu-left">
-                    <img src="pesarattu.jpeg" >
+                    <img src="pesarattu.jped" >
+                    <img src="pesarattu.jpeg">
                     <h2> Recipe</h2>
                     <h4> Ingredients:</h4>
                     <ul>
