--- a/chettinad.html
+++ b/chettinad.html
@@ -38,7 +38,7 @@
             <div class="row">
               
                 <div class="chettinad-left">
-                    <img src="chettinad.html" >
+                    <img src="chettinad.jpeg" >
                     <h2> Recipe</h2>
                     <h4> Ingredients:</h4>
                     <ul>
