--- a/kollu.html
+++ b/kollu.html
@@ -38,7 +38,7 @@
             <div class="row">
               
                 <div class="kollu-left">
-                    <img src="kollu.html" >
+                    <img src="kollu.jpeg" >
                     <h2> Recipe</h2>
                     <h4> Ingredients:</h4>
                     <ul>
