--- a/pasta.html
+++ b/pasta.html
@@ -38,7 +38,7 @@
             <div class="row">
               
                 <div class="pasta-left">
-                    <img src="pasta.html" >
+                    <img src="pasta.jpeg" >
                     <h2> Recipe</h2>
                     <h4> Ingredients:</h4>
                     <ul>
